Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignIntegerIntObj.quorum
class Main
    action Main
        Integer i
        integer int i = 0
        i:SetValue(5)
        int = cast(integer, i)
        if int = 5
            output "passed"
        end
    end
end